# database_sql_project

./: .env.sample  .gitignore  README.md  pyproject.toml  settings.py
course_project_4/: add_colunm.py  create_table_suppliers.sql  customers_page.sql  employees_page.sql  modul_python.py  orders_page.sql  products_page.sql  script_suppliers.py
database_and_sql/: add_colunm.py  customers_page.sql  employees_page.sql  modul_python.py  orders_page.sql  products_page.sql  script_suppliers.py
